--- a/apps/caputok/FAQ.html
+++ b/apps/caputok/FAQ.html
@@ -3,18 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Frequently Asked Questions about the Caputok App">
-    <meta name="keywords" content="Caputok, TikTok unfollowers, social media tool, find unfollowers">
+    <meta name="description" content="Frequently Asked Questions (FAQ) about the Caputok App, a tool to find TikTok unfollowers and manage your following list.">
+    <meta name="keywords" content="Caputok, TikTok unfollowers, TikTok follower tool, social media management, find unfollowers">
     <meta name="author" content="Caputok Team">
-    <title>FAQ - Caputok App</title>
+    <title>FAQ - Caputok App | TikTok Unfollowers Tool</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
+            margin: 20px auto;
             padding: 20px;
             max-width: 800px;
-            margin-left: auto;
-            margin-right: auto;
             background-color: #f9f9f9;
         }
         h1, h2 {
@@ -31,104 +29,175 @@
         a:hover {
             text-decoration: underline;
         }
+        .faq-item {
+            margin-bottom: 20px;
+        }
+        .app-card {
+            min-width: 100px;
+            width: 100px;
+            position: relative;
+            vertical-align: top;
+            margin: 10px 10px 10px 0;
+            white-space: normal;
+            line-height: 1.2;
+            text-align: center;
+        }
+        .app-card figure {
+            width: auto;
+            height: 100px;
+            margin: 0 0 10px;
+            cursor: pointer;
+        }
+        .app-card figure img {
+            width: 100px;
+            height: auto;
+            border-radius: 5px;
+        }
+        .app-card .name {
+            font-family: 'Roboto Slab', serif;
+            color: #333;
+            font-size: 14px;
+            font-weight: 600;
+            word-break: break-word;
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+        }
+        .app-card .name a {
+            text-decoration: none;
+            color: inherit;
+            cursor: pointer;
+        }
+        .app-card .description {
+            font-family: 'Roboto Slab', serif;
+            color: #999;
+            font-size: 12px;
+            font-weight: 300;
+            margin-top: 5px;
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+        }
         @media (max-width: 600px) {
             body {
                 padding: 10px;
             }
+            .app-card {
+                margin: 10px auto;
+            }
         }
     </style>
+
+    <!-- Google Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;600&display=swap">
+
+    <!-- Structured Data for Google Rich Snippets -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+            {
+                "@type": "Question",
+                "name": "What is the Caputok App?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Caputok is a simple tool that analyzes a text file and provides a list of non-followers. It offers a clean interface and is dedicated to TikTok users who want to keep their following list clean."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Why is the Caputok App needed?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Unlike many apps on the Google Play Store or other platforms that focus on other social media, Caputok is designed specifically for TikTok users to easily find unfollowers and manage their following list."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "How does the Caputok App work?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "It analyzes the 'following' and 'followers' files, identifying usernames present in the 'following' file but absent in the 'followers' file. For a detailed user guide, visit <a href=\"https://krishnaniraula.com.np/assets/apps/caputok/userguide.html\" target=\"_blank\">this link</a>."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Do I really need the Caputok App?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "If you have over 1,000 followings, care about maintaining a clean following list, and lack time to manually check each user, Caputok is ideal for you. Try it and leave a review!"
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "How can I get the Caputok App?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Caputok is currently available on the <a href=\"https://caputok.en.uptodown.com/android\" target=\"_blank\">Uptodown App Store</a> or in the Oppo App Market in India, Indonesia, Malaysia, Russia, the Philippines, Taiwan-China, and Vietnam. Oppo users in these regions can download it directly from the Oppo App Market. If outside these regions, change your phone’s region settings to one of the supported regions and search for it in the Oppo App Market."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Why isn’t Caputok in the Google Play Store or Apple App Store?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "We plan to gradually release Caputok in more regions and app stores soon."
+                }
+            }
+        ]
+    }
+    </script>
 </head>
 <body>
-    <h1>FAQ</h1>
+    <h1>Frequently Asked Questions (FAQ) - Caputok App</h1>
 
-    <h2>What is the Caputok App?</h2>
-    <p>Caputok is a simple tool that analyzes a text file and provides a list of non-followers. It offers a clean interface. Many people search for tools online to find out who unfollowed them on TikTok. This app is dedicated to users who want to keep their following list clean.</p>
+    <section class="faq-item">
+        <h2>What is the Caputok App?</h2>
+        <p>Caputok is a simple tool that analyzes a text file and provides a list of non-followers. It offers a clean interface. Many people search for tools online to find out who unfollowed them on TikTok. This app is dedicated to users who want to keep their following list clean.</p>
+    </section>
 
-    <h2>Why is it needed?</h2>
-    <p>There are many apps in the Google Play Store and other app stores that claim to help users find TikTok unfollowers. However, most of them are actually designed for other social media platforms, not TikTok. Caputok is solely dedicated to helping TikTok users and making their task easier. It has nothing to do with other social media platforms.</p>
+    <section class="faq-item">
+        <h2>Why is it needed?</h2>
+        <p>There are many apps in the Google Play Store and other app stores that claim to help users find TikTok unfollowers. However, most of them are actually designed for other social media platforms, not TikTok. Caputok is solely dedicated to helping TikTok users and making their task easier. It has nothing to do with other social media platforms.</p>
+    </section>
 
-    <h2>How does it work?</h2>
-    <p>It works based on a simple logic. It analyzes the 'following' file and the 'followers' file, then identifies the usernames that are in the first file but not in the second. For a user guide, visit <a href="https://krishnaniraula.com.np/assets/apps/caputok/userguide.html">this link</a>.</p>
+    <section class="faq-item">
+        <h2>How does it work?</h2>
+        <p>It works based on a simple logic. It analyzes the 'following' file and the 'followers' file, then identifies the usernames that are in the first file but not in the second. For a user guide, visit <a href="https://krishnaniraula.com.np/assets/apps/caputok/userguide.html" target="_blank" rel="noopener">this link</a>.</p>
+    </section>
 
-    <h2>Do I really need it?</h2>
-    <p>It is completely your choice. If you have more than 1,000 followings, care about keeping your following list clean, and do not have time to manually check each user, then this app is for you. Just try it and leave a review.</p>
+    <section class="faq-item">
+        <h2>Do I really need it?</h2>
+        <p>It is completely your choice. If you have more than 1,000 followings, care about keeping your following list clean, and do not have time to manually check each user, then this app is for you. Just try it and leave a review.</p>
+    </section>
 
-    <h2>How can I get this app?</h2>
-    <p>Currently, Caputok is only available in the Oppo App Market in India, Indonesia, Malaysia, Russia, the Philippines, Taiwan-China, and Vietnam. If you have an Oppo phone and are in one of these regions, you can download and use it. If you have an Oppo phone but are outside these regions, you can change your phone's region settings to one of the supported regions and search for it in the Oppo App Market. If you do not have an Oppo phone, you can ask a friend with an Oppo device to help you download it.</p>
+    <section class="faq-item">
+        <h2>How can I get this app?</h2>
+        <p>Caputok is currently available on the <a href="https://caputok.en.uptodown.com/android" target="_blank" rel="noopener">Uptodown App Store</a> or in the Oppo App Market in India, Indonesia, Malaysia, Russia, the Philippines, Taiwan-China, and Vietnam. Oppo users in these regions can download it directly from the Oppo App Market. If outside these regions, change your phone’s region settings to one of the supported regions and search for it in the Oppo App Market.</p>
+    </section>
 
-    <h2>Why is this not in the Google Play Store or Apple App Store?</h2>
-    <p>We plan to release it gradually in more regions and on more app stores soon.</p>
+    <section class="faq-item">
+        <h2>Why is this not in the Google Play Store or Apple App Store?</h2>
+        <p>We plan to release it gradually in more regions and on more app stores soon.</p>
+    </section>
 
-<style>
-                    @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;600&display=swap');
-                    .item {
-                        min-width: 100px;
-                        width: 100px;
-                        position: relative;
-                        vertical-align: top;
-                        margin: 10px 10px 10px 0;
-                        white-space: normal;
-                        line-height: 1.2;
-                    }
-                    .item figure {
-                        width: auto;
-                        height: 100px;
-                        margin: 0 0 10px;
-                        text-align: center;
-                        cursor: pointer;
-                    }
-                    .item figure img {
-                        width: 100px;
-                        height: auto;
-                        border-radius: 5px;
-                    }
-                    .item div.name {
-                        font-family: Roboto slab, serif;
-                        color: #333333;
-                        font-size: 14px;
-                        font-weight: 600;
-                        word-break: break-word;
-                        display: -webkit-box;
-                        -webkit-line-clamp: 3;
-                        -webkit-box-orient: vertical;
-                        overflow: hidden;
-                        text-align: center;
-                    }
-                    .item div.name a {
-                        text-decoration: none;
-                        color: inherit;
-                        cursor: pointer;
-                    }
-                    .item div.description {
-                        font-family: Roboto slab,serif;
-                        color: #999;
-                        font-size: 12px;
-                        font-weight: 300;
-                        margin-top: 5px;
-                        display: -webkit-box;
-                        -webkit-line-clamp: 3;
-                        -webkit-box-orient: vertical;
-                        overflow: hidden;
-                        text-align: center;
-                    }
-        </style>
-                    <div class="item">
-                        <figure onclick="location.href='https://caputok.en.uptodown.com/android';">
-                            <img 
-                                width="100"
-                                height="100"
-                                alt="Caputok icon"
-                                loading="lazy"
-                                class="app_card_img"
-                                src="https://img.utdstc.com/icon/68e/51b/68e51b596f6e0604f7c7e1e4012d3eb912f6d6dffcab20e0ed67cb74d5b6bdf9"
-                                srcset="https://img.utdstc.com/icon/68e/51b/68e51b596f6e0604f7c7e1e4012d3eb912f6d6dffcab20e0ed67cb74d5b6bdf9:100 1x, https://img.utdstc.com/icon/68e/51b/68e51b596f6e0604f7c7e1e4012d3eb912f6d6dffcab20e0ed67cb74d5b6bdf9:200 2x, https://img.utdstc.com/icon/68e/51b/68e51b596f6e0604f7c7e1e4012d3eb912f6d6dffcab20e0ed67cb74d5b6bdf9:300 3x">
-                    </figure>
-                    <div class="name">
-                        <a href="https://caputok.en.uptodown.com/android" title="Download Caputok">Caputok</a>
-                    </div>
-                    <div class="description">Find who unfollowed you on TikTok</div>
-                    </div>
+    <div class="app-card">
+        <figure onclick="location.href='https://caputok.en.uptodown.com/android';">
+            <img 
+                width="100" 
+                height="100" 
+                alt="Caputok App Icon" 
+                loading="lazy" 
+                src="https://img.utdstc.com/icon/68e/51b/68e51b596f6e0604f7c7e1e4012d3eb912f6d6dffcab20e0ed67cb74d5b6bdf9" 
+                srcset="https://img.utdstc.com/icon/68e/51b/68e51b596f6e0604f7c7e1e4012d3eb912f6d6dffcab20e0ed67cb74d5b6bdf9:100 1x, https://img.utdstc.com/icon/68e/51b/68e51b596f6e0604f7c7e1e4012d3eb912f6d6dffcab20e0ed67cb74d5b6bdf9:200 2x, https://img.utdstc.com/icon/68e/51b/68e51b596f6e0604f7c7e1e4012d3eb912f6d6dffcab20e0ed67cb74d5b6bdf9:300 3x">
+        </figure>
+        <div class="name">
+            <a href="https://caputok.en.uptodown.com/android" title="Download Caputok App" rel="nofollow noopener">Caputok</a>
+        </div>
+        <div class="description">Find who unfollowed you on TikTok</div>
+    </div>
 </body>
 </html>
-
-
