--- a/land-area-converter/index.html
+++ b/land-area-converter/index.html
@@ -7,7 +7,7 @@
     <link rel="alternate" hreflang="en-np" href="https://krishnaniraula.com.np/land-area-converter/">
     <link rel="alternate" hreflang="en" href="https://krishnaniraula.com.np/land-area-converter/">
     <link rel="alternate" hreflang="x-default" href="https://krishnaniraula.com.np/land-area-converter/">
-
+<link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
     <meta name="google-adsense-account" content="ca-pub-7909865065068819">
      <meta name="description" content="Easily convert land area units like Ropani, Aana, Dhur, Kattha, and Bigaha to square meters, acres, and hectares with this accurate Nepali Land Area Converter tool.">
      <title>Land Area Converter - Convert Ropani, Aana, Dhur to Sq. Meters, Bigaha, all in Nepali Measurements</title>
