--- a/index.html
+++ b/index.html
@@ -94,7 +94,23 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
     </div>
 </section>
 
-
+<section id="tools" class="tools">
+    <div class="tools-content">
+        <div class="section-heading text-center">
+            <h2>Tools</h2>
+        </div>
+        <div class="container">
+            <div class="box-container">
+                <a href="unit_converter.html" class="box">Unit Converter</a>
+                <a href="concrete_calculator.html" class="box">Concrete Calculator</a>
+                <a href="load_calculator.html" class="box">Load Calculator</a>
+                <a href="rebar_calculator.html" class="box">Rebar Calculator</a>
+                <a href="land-area-converter/" class="box">Land Area Converter</a>
+                <a href="time-series-chart-animation/" class="box">Animated Time-Series Chart</a>
+            </div>
+        </div>
+    </div>
+</section>
 	  
    
 
