--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
         </div>
         <div class="container">
             <div class="box-container">
-                <a href="unit_converter.html" class="box">Unit Converter</a>
+                <a href="converter/unit converter/" class="box">Unit Converter</a>
                 <a href="concrete_calculator.html" class="box">Concrete Calculator</a>
                 <a href="load_calculator.html" class="box">Load Calculator</a>
                 <a href="rebar_calculator.html" class="box">Rebar Calculator</a>
