--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
         <div class="container">
             <div class="box-container">
                 <a href="converter/unit converter/" class="box">Unit Converter</a>
-                <a href="concrete_calculator.html" class="box">Concrete Calculator</a>
+                <a href="converter/concrete-calculator" class="box">Concrete Calculator</a>
                 <a href="load_calculator.html" class="box">Load Calculator</a>
                 <a href="rebar_calculator.html" class="box">Rebar Calculator</a>
                 <a href="land-area-converter/" class="box">Land Area Converter</a>
