--- a/converter/concrete-calculator/index.html
+++ b/converter/concrete-calculator/index.html
@@ -11,7 +11,7 @@
     <!-- Navigation Bar -->
     <nav>
         <div class="nav-left">
-            <a href="#" onclick="window.location.reload();" class="no-dec">Home</a>
+            <a href="/index.html" class="no-dec">Home</a>
         </div>
 
         <div class="nav-right">
