--- a/converter/concrete-calculator/index.html
+++ b/converter/concrete-calculator/index.html
@@ -53,10 +53,10 @@
                     <h3>Concrete Material Estimate</h3>
                     <label for="concreteStrength">Select Concrete Strength:</label>
                     <select id="concreteStrength">
-                        <option value="M10">M10</option>
-                        <option value="M15">M15</option>
-                        <option value="M20">M20</option>
-                        <option value="M25">M25</option>
+                        <option value="M10">M10 (1:3:6)</option>
+                        <option value="M15">M15 (1:2:4)</option>
+                        <option value="M20">M20 (1:1.5:3)</option>
+                        <option value="M25">M25 (1:1:2)</option>
                     </select>
 
                     <label for="concreteVolume">Enter Volume (in m³):</label>
