--- a/converter/Load-calculator/index.html
+++ b/converter/Load-calculator/index.html
@@ -17,7 +17,6 @@
                 <button id="addColumn" class="tool-btn">Add Column</button>
                 <button id="addBeam" class="tool-btn">Add Beam</button>
                 <button id="addSlab" class="tool-btn">Add Slab</button>
-                <button id="deleteElement" class="tool-btn danger">Delete</button>
             </div>
             <div class="tool-section">
                 <label for="units">Units:</label>
@@ -37,6 +36,14 @@
         </div>
         <div id="canvas"></div>
         <div id="results"></div>
+        <div id="contextMenu" class="context-menu">
+            <button id="editBtn">Edit Dimensions</button>
+            <button id="moveBtn">Move</button>
+            <button id="copyBtn">Copy</button>
+            <button id="deleteBtn">Delete</button>
+            <button id="resizeLeftBtn" class="resize-btn">Resize Left</button>
+            <button id="resizeRightBtn" class="resize-btn">Resize Right</button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
