--- a/converter/Load-calculator/index.html
+++ b/converter/Load-calculator/index.html
@@ -34,7 +34,9 @@
                 <button id="calculateLoads" class="tool-btn primary">Calculate Loads</button>
             </div>
         </div>
-        <div id="canvas"></div>
+        <div id="canvas">
+            <div id="grid"></div>
+        </div>
         <div id="results"></div>
         <div id="contextMenu" class="context-menu">
             <button id="editBtn">Edit Dimensions</button>
