--- a/converter/Load-calculator/index.html
+++ b/converter/Load-calculator/index.html
@@ -16,6 +16,7 @@
             <button id="drawColumn" class="tool-btn">Column</button>
             <button id="drawBeam" class="tool-btn">Beam</button>
             <button id="drawSlab" class="tool-btn">Slab</button>
+            <button id="toggleSnap" class="tool-btn">Snap On</button>
         </div>
         <div id="canvas-container">
             <div id="ruler-x" class="ruler ruler-x"></div>
