--- a/converter/unit converter/index.html
+++ b/converter/unit converter/index.html
@@ -30,6 +30,9 @@
                 <option value="mm">Millimeter (mm)</option>
                 <option value="ft">Feet (ft)</option>
                 <option value="in">Inches (in)</option>
+                <option value="mi">Miles (mi)</option>
+                <option value="ya">Yards (ya)</option>
+                <option value="nm">Nautical mile (nm)</option>
             </select>
             <button onclick="convertLength()">Convert</button>
             <div id="lengthResults" class="results-box"></div>
