--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
             <div class="box-container">
                 <a href="converter/unit converter/" class="box">Unit Converter</a>
                 <a href="Load-calculator/" class="box">Load Calculator</a>
-                <a href="rebar_calculator.html" class="box">Rebar Calculator</a>
 		<a href="converter/concrete-calculator" class="box">Concrete Calculator</a>
+		<a href="converter/steel-bars-calculator" class="box">Steel Bar Calculator</a>
                 <a href="land-area-converter/" class="box">Land Area Converter</a>
                 <a href="time-series-chart-animation/" class="box">Animated Time-Series Chart</a>
             </div>
